--- a/login.html
+++ b/login.html
@@ -8,14 +8,12 @@
     <body>
         <form action="/a.php">
         <div class="page">
-            <h1>Login</h1>
-            <a>Email or Phone</a><br>
-            <input type="text" placeholder="gmail/mob no"><br>
-            <a>Password-</a><br>
-            <input type="password" placeholder="password"><br><br>
+            <h1 style="font-family: sans-serif;">Login</h1><hr><br>
+            <input type="text" placeholder="Username"><br>
+            <input type="password" placeholder="Password"><br><br>
             <button><b>Login</b></button>
              <br><br>
-            <a class="link">For new registration</a>
+            <a class="link" style="font-family: sans-serif;">For new registration</a>
             <a href="registration.html" class="rel">click here</a>
         </div>
     </form>
