--- a/registration.html
+++ b/registration.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Registration</title>
-        <link rel="stylesheet" href="registration.css">
-    </head>
-    <body>
-        <form action="/a.php">
-            <div class="reg">
-                <h1><b>Registration</b></h1>
-                <a>First Name</a><br>
-                <input type="text" placeholder="First name"><br>
-                <a>Last Name</a><br>
-                <input type="text" placeholder="Last name"><br>
-                <a>Mobile No</a><br>
-                <input type="number" placeholder="Mobile no"><br>
-                <a>E-mail</a><br>
-                <input type="text" placeholder="E-mail"><br>
-                <a>Enter Password</a><br>
-                <input type="password" placeholder="Password"><br>
-                <a>Re-enter Password</a><br>
-                <input type="password" placeholder="Re-enter Passeord"><br><br>
-                <button class="sub"> Register</button><br><br>
-                <a id="acc">Already have an account ?</a>
-                <a href="login.html" id="link">Log in</a>
-            </div>
-        </form>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration Form</title>
+  <link rel="stylesheet" href="a.css">
+</head>
+
+<body>
+  <div class="registration">
+    <h2>Registration</h2><hr><br>
+    <form class="form" action="#" method="post">
+      <div class="form-group">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <div class="form-group">
+        <label for="confirm-password">Confirm Password:</label>
+        <input type="password" id="confirm-password" name="confirm-password" required>
+      </div>
+      <div class="form-group">
+        <button type="submit">Register</button>
+      </div>
+      <label for="">Already Registered <a href="login.html">Login</a></label>
+    </form>
+  </div>
+</body>
 </html>
